# just_practicing_stuff_py

./: apids.json  apids.md  apids.py  apids_tests.py  concurrency_workers.py  g_abc.ipynb  g_asyncio.ipynb  g_collections.ipynb  g_concurrency.ipynb  g_cython.ipynb  g_dataclasses.ipynb  g_decorators.ipynb  g_fw-django.ipynb  g_fw-fastapi.ipynb  g_fw-flask.ipynb  g_generators.ipynb  g_grpc-fix.ipynb  g_grpc-fix.proto  g_grpc_fix_pb2.py  g_grpc_fix_pb2_grpc.py  g_metaclasses.ipynb  g_numba.ipynb  g_optimal-numpy.ipynb  g_optimal-pandas.ipynb  g_pip.ipynb  g_pybind11.ipynb  g_pyspark.ipynb  g_redis-hft.ipynb  g_redis.ipynb  g_scikit-fem.ipynb  g_unittest.ipynb  p_abc.ipynb  p_asyncio.ipynb  p_collections.ipynb  p_concurrency.ipynb  p_concurrency_ex4.py  p_cython.ipynb  p_dataclasses.ipynb  p_decorators.ipynb  p_fw-django.ipynb  (+7 more)
cython_build/: setup.py  sum_squares.c  sum_squares.pyx
g_pip/demo_pkg_project/: README.md  pyproject.toml
g_pip/demo_pkg_project/src/demo_pkg/: __init__.py  cli.py
pybind11_build/: setup_minimal.py  trading_minimal.cpp
