[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-pkg-cursor"
version = "0.1.0"
description = "Temporary demo package for packaging examples"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Notebook Demo"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
docs = ["mkdocs>=1.6"]

[project.scripts]
demo-hello = "demo_pkg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
